---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Setup the entity, item, sounds & test them
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 04
  Info:
    - Initial commit