@@ -1,2 +1,3 @@
 [entity-name]
 alchemical-combinator=Alchemical combinator
+alchemical-combinator-active=Alchemical combinator
